--- a/LISy/LISy/AddDocument.xaml
+++ b/LISy/LISy/AddDocument.xaml
@@ -16,7 +16,7 @@
         <Grid.Background>
             <ImageBrush ImageSource="Design/books_shelf_back.jpg"/>
         </Grid.Background>
-        
+
         <Label x:Name="label_main" Content="Choose the type of a document:" Margin="10,10,0,0" Foreground="White" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="218"/>
         <Button x:Name="add_book" Content="Book" Margin="233,10,0,0" Click="add_book_Click" Height="30" VerticalAlignment="Top" HorizontalAlignment="Left" Width="75" Background="{x:Null}" Foreground="White" BorderBrush="White"/>
         <Button x:Name="add_reference_book" Content="Inner material" Margin="313,10,0,0" Click="add_reference_book_Click" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Top" Background="{x:Null}" Foreground="White" BorderBrush="White"/>
@@ -30,27 +30,29 @@
         <TextBox x:Name="publisher_of_book" HorizontalAlignment="Left" Height="26" Margin="85,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="publisher_of_book_TextChanged" Visibility="Hidden"/>
         <Label x:Name="edition_of_book_label" Content="Edition:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
         <TextBox x:Name="edition_of_book" HorizontalAlignment="Left" Height="26" Margin="85,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="TextBox_Edition_Changed" Visibility="Hidden"/>
-        <Label x:Name="year_label" Content="Year:" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
-        <TextBox x:Name="year_of_book" HorizontalAlignment="Left" Height="26" Margin="85,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="year_of_book_TextChanged" Visibility="Hidden"/>
-        <Label x:Name="keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.231" Foreground="White" Visibility="Hidden"/>
-        <TextBox x:Name="keywords_of_book" HorizontalAlignment="Left" Height="26" Margin="85,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="keywords_of_book_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="year_label" Content="Year:" HorizontalAlignment="Left" Margin="313,76,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
+        <TextBox x:Name="year_of_book" HorizontalAlignment="Left" Height="26" Margin="388,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="year_of_book_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="313,107,0,0" VerticalAlignment="Top" Width="70" RenderTransformOrigin="0.5,0.231" Foreground="White" Visibility="Hidden"/>
+        <TextBox x:Name="keywords_of_book" HorizontalAlignment="Left" Height="26" Margin="388,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="keywords_of_book_TextChanged" Visibility="Hidden"/>
         <Label x:Name="price_label" Content="Price:" HorizontalAlignment="Left" Margin="313,45,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
         <TextBox x:Name="price_of_book" HorizontalAlignment="Left" Height="26" Margin="388,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="price_of_book_TextChanged" Visibility="Hidden"/>
-        <CheckBox x:Name="best_seller_of_book" Content="Best Seller" HorizontalAlignment="Left" Margin="388,113,0,0" VerticalAlignment="Top" Visibility="Hidden" Foreground="White"/>
-        <Button x:Name="add_book_to_db" Content="Add" HorizontalAlignment="Left" Margin="481,200,0,0" VerticalAlignment="Top" Width="130" Height="35" FontSize="16" Click="add_book_to_db_Click" Visibility="Hidden"/>
-        <TextBox x:Name="book_cover_URL_text_box" HorizontalAlignment="Left" Height="26" Margin="85,231,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="cover_URL_text_box_TextChanged" Visibility="Hidden"/>
-        <Label x:Name="book_coverURL_label" Content="Cover URL:" HorizontalAlignment="Left" Margin="10,231,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
-        
+        <CheckBox x:Name="best_seller_of_book" Content="Best Seller" HorizontalAlignment="Left" Margin="85,169,0,0" VerticalAlignment="Top" Visibility="Hidden" Foreground="White"/>
+        <Button x:Name="add_book_to_db" Content="Add" HorizontalAlignment="Left" Margin="481,169,0,0" VerticalAlignment="Top" Width="130" Height="35" FontSize="16" Click="add_book_to_db_Click" Visibility="Hidden" Background="{x:Null}" BorderBrush="White" Foreground="White"/>
+        <TextBox x:Name="book_cover_URL_text_box" HorizontalAlignment="Left" Height="26" Margin="388,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="cover_URL_text_box_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="book_coverURL_label" Content="Cover URL:" HorizontalAlignment="Left" Margin="313,138,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
+
         <Label x:Name="av_title_label" Content="Title:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
         <TextBox x:Name="av_title_text_box" HorizontalAlignment="Left" Height="26" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_title_text_box_TextChanged" Visibility="Hidden"/>
         <Label x:Name="authors_av_label" Content="Authors:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
         <TextBox x:Name="authors_av_text_box" HorizontalAlignment="Left" Height="26" Margin="85,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="authors_av_text_box_TextChanged" Visibility="Hidden"/>
-        <Button x:Name="av_add_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,138,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="av_add_to_db_Click" Visibility="Hidden"/>
-        <Label x:Name="av_price_label" Content="Price:" HorizontalAlignment="Left" Margin="313,107,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
-        <TextBox x:Name="av_price_text_box" HorizontalAlignment="Left" Height="26" Margin="388,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="Av_price_text_box" Visibility="Hidden"/>
-        <Label x:Name="av_keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
-        <TextBox x:Name="av_key_words_text_box" HorizontalAlignment="Left" Height="26" Margin="85,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_key_words_text_box_TextChanged" Visibility="Hidden"/>
-        
+        <Button x:Name="av_add_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,107,0,0" VerticalAlignment="Top" Width="90" Height="31" Click="av_add_to_db_Click" Visibility="Hidden" Background="{x:Null}" BorderBrush="White" Foreground="White"/>
+        <Label x:Name="av_price_label" Content="Price:" HorizontalAlignment="Left" Margin="313,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
+        <TextBox x:Name="av_price_text_box" HorizontalAlignment="Left" Height="26" Margin="388,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="Av_price_text_box" Visibility="Hidden"/>
+        <Label x:Name="av_keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="313,71,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
+        <TextBox x:Name="av_key_words_text_box" HorizontalAlignment="Left" Height="26" Margin="388,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_key_words_text_box_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="av_coverURL_label" Content="Cover URL:" HorizontalAlignment="Left" Margin="10,107,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
+        <TextBox x:Name="av_coverURL_text_box" HorizontalAlignment="Left" Height="26" Margin="85,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_coverURL_text_box_TextChanged" Visibility="Hidden"/>
+
         <Label x:Name="ja_title_label" Content="Title:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
         <TextBox x:Name="ja_title_text_box" HorizontalAlignment="Left" Height="27" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="ja_title_text_box_TextChanged" Visibility="Hidden"/>
         <Label x:Name="ja_publisher_label" Content="Publisher:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
@@ -63,10 +65,15 @@
         <TextBox x:Name="ja_PD_text_box" HorizontalAlignment="Left" Height="26" Margin="418,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="193" FontSize="16" TextChanged="ja_PD_text_box_TextChanged" Visibility="Hidden"/>
         <Label x:Name="ja_price_label" Content="Price:" HorizontalAlignment="Left" Margin="313,76,0,0" VerticalAlignment="Top" Width="75" Visibility="Hidden" Foreground="White"/>
         <TextBox x:Name="ja_price_text_box" HorizontalAlignment="Left" Height="26" Margin="388,76,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="ja_price_text_box_TextChanged" Visibility="Hidden"/>
-        <Button x:Name="add_ja_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,169,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="add_ja_to_db_Click" Visibility="Hidden"/>
-        <Label x:Name="ja_keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
-        <TextBox x:Name="ja_keywords_text_box" HorizontalAlignment="Left" Height="26" Margin="85,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="ja_keywords_text_box_TextChanged" Visibility="Hidden"/>
-        
+        <Button x:Name="add_ja_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,169,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="add_ja_to_db_Click" Visibility="Hidden" Background="{x:Null}" BorderBrush="White" Foreground="White"/>
+        <Label x:Name="ja_keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="313,107,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
+        <TextBox x:Name="ja_keywords_text_box" HorizontalAlignment="Left" Height="26" Margin="388,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="ja_keywords_text_box_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="ja_coverURL_label" Content="Cover URL:" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
+        <TextBox x:Name="ja_coverURL_text_box" HorizontalAlignment="Left" Height="26" Margin="85,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="ja_coverURL_text_box_TextChanged" Visibility="Hidden"/>
+        <Label x:Name="ja_countOf_label" Content="Count of journal articles:" HorizontalAlignment="Left" Margin="313,138,0,0" VerticalAlignment="Top" Width="139" Foreground="White" Visibility="Hidden"/>
+        <TextBox x:Name="ja_countOf_text_box" HorizontalAlignment="Left" Height="26" Margin="457,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="154" FontSize="16" TextChanged="ja_countOf_text_box_TextChanged" Visibility="Hidden"/>
+
+
         <Label x:Name="inner_title_label" Content="Title:" HorizontalAlignment="Left" Margin="10,45,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
         <TextBox x:Name="inner_title_box" HorizontalAlignment="Left" Height="26" Margin="85,45,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" TextChanged="innner_title_TextChanged" FontSize="16" Visibility="Hidden"/>
         <Label x:Name="inner_author_label" Content="Authors:" HorizontalAlignment="Left" Margin="10,76,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
@@ -81,14 +88,7 @@
         <TextBox x:Name="inner_type_text_box" HorizontalAlignment="Left" Height="26" Margin="388,107,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="inner_type_text_box_TextChanged" Visibility="Hidden"/>
         <Label x:Name="inner_coverUrl_label" Content="CoverUrl:" HorizontalAlignment="Left" Margin="10,138,0,0" VerticalAlignment="Top" Width="70" Visibility="Hidden" Foreground="White"/>
         <TextBox x:Name="inner_cover_url_box" HorizontalAlignment="Left" Height="26" Margin="85,138,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="inner_cover_url_box_TextChanged" Visibility="Hidden"/>
-        
-        <Button x:Name="add_inner_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,138,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="add_inner_to_db_Click" Visibility="Hidden"/>
-       
-        <Label x:Name="av_coverURL_label" Content="Cover URL:" HorizontalAlignment="Left" Margin="10,169,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
-        <TextBox x:Name="av_coverURL_text_box" HorizontalAlignment="Left" Height="26" Margin="85,169,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_coverURL_text_box_TextChanged" Visibility="Hidden"/>
-        <Label x:Name="ja_coverURL_label" Content="Cover URL:" HorizontalAlignment="Left" Margin="10,200,0,0" VerticalAlignment="Top" Width="70" Foreground="White" Visibility="Hidden"/>
-        <TextBox x:Name="ja_coverURL_text_box" HorizontalAlignment="Left" Height="26" Margin="85,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="ja_coverURL_text_box_TextChanged" Visibility="Hidden"/>
-        <Label x:Name="ja_countOf_label" Content="Count of journal articles:" HorizontalAlignment="Left" Margin="10,231,0,0" VerticalAlignment="Top" Width="139" Foreground="White" Visibility="Hidden"/>
-        <TextBox x:Name="ja_countOf_text_box" HorizontalAlignment="Left" Height="26" Margin="149,231,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="159" FontSize="16" TextChanged="ja_countOf_text_box_TextChanged" Visibility="Hidden"/>
+        <Button x:Name="add_inner_to_db" Content="Add" HorizontalAlignment="Left" Margin="521,138,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="add_inner_to_db_Click" Visibility="Hidden" Background="{x:Null}" BorderBrush="White" Foreground="White"/>
+
     </Grid>
 </Window>
