--- a/LISy/LISy/ModifyAVMaterials.xaml
+++ b/LISy/LISy/ModifyAVMaterials.xaml
@@ -20,13 +20,13 @@
         <TextBox x:Name="av_room_text_box" HorizontalAlignment="Left" Height="26" Margin="388,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_room_text_box_TextChanged" Visibility="Visible"/>
         <Label x:Name="av_level_label" Content="Level:" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Width="70" Visibility="Visible" Foreground="White"/>
         <TextBox x:Name="av_level_text_box" HorizontalAlignment="Left" Height="26" Margin="85,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_level_text_box_TextChanged" Visibility="Visible"/>
-        <Button x:Name="av_add_to_db" Content="Save" HorizontalAlignment="Left" Margin="521,140,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="save_to_db" Visibility="Visible"/>
+        <Button x:Name="av_add_to_db" Content="Save" HorizontalAlignment="Left" Margin="521,140,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="save_to_db" Visibility="Visible" Background="{x:Null}" Foreground="White" BorderBrush="White"/>
         <Label x:Name="av_price_label" Content="Price:" HorizontalAlignment="Left" Margin="313,72,0,0" VerticalAlignment="Top" Width="70" Visibility="Visible" Foreground="White"/>
         <TextBox x:Name="av_price_text_box" HorizontalAlignment="Left" Height="26" Margin="388,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="Av_price_text_box" Visibility="Visible"/>
         <Label x:Name="av_keywords_label" Content="KeyWords:" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="70" Visibility="Visible" Foreground="White"/>
         <TextBox x:Name="av_key_words_text_box" HorizontalAlignment="Left" Height="26" Margin="85,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_key_words_text_box_TextChanged" Visibility="Visible"/>
         <Label Content="CoverUrl:" HorizontalAlignment="Left" Margin="313,103,0,0" VerticalAlignment="Top" Width="70" Foreground="White"/>
         <TextBox x:Name="av_coverUrl_text_box" HorizontalAlignment="Left" Height="26" Margin="388,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="223" FontSize="16" TextChanged="av_coverUrl_text_box_TextChanged"/>
-        <Button x:Name="delete_db" Content="Delete" HorizontalAlignment="Left" Margin="426,140,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="delete_db_Click"/>
+        <Button x:Name="delete_db" Content="Delete" HorizontalAlignment="Left" Margin="426,140,0,0" VerticalAlignment="Top" Width="90" Height="26" Click="delete_db_Click" Background="{x:Null}" Foreground="White" BorderBrush="White"/>
     </Grid>
 </Window>
