--- a/LISy/LISy/LibAdminModify.xaml
+++ b/LISy/LISy/LibAdminModify.xaml
@@ -5,14 +5,14 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="AddLibrarian" Height="323.929" Width="324.837" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico" WindowStartupLocation="CenterScreen">
+        Title="AddLibrarian" Height="263.929" Width="324.837" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico" WindowStartupLocation="CenterScreen">
     <Window.Background>
         <ImageBrush ImageSource="Design/books_shelf_back.jpg"/>
     </Window.Background>
     <Grid>
         <Label x:Name="lib_name_label" Content="Name:" Margin="10,10,0,0" Height="26" VerticalAlignment="Top" HorizontalAlignment="Left" Width="50" Foreground="White"/>
         <TextBox x:Name="lib_name_box" Margin="65,10,0,0" TextWrapping="Wrap" FontSize="14" TextChanged="lib_name_box_TextChanged" HorizontalAlignment="Left" Width="219" Height="26" VerticalAlignment="Top"/>
-        <Button x:Name="add_new_lib_to_system" Content="Save" Margin="184,165,0,0" Click="add_new_lib_to_system_Click" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White"/>
+        <Button x:Name="add_new_lib_to_system" Content="Save" Margin="184,134,0,0" Click="add_new_lib_to_system_Click" HorizontalAlignment="Left" Width="100" Height="30" VerticalAlignment="Top" Background="{x:Null}" BorderBrush="White" Foreground="White"/>
         <Label x:Name="AddressLabel" Content="Address:" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top" Width="65" Foreground="White"/>
         <TextBox x:Name="AddressTextBox" HorizontalAlignment="Left" Height="26" Margin="80,72,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" TextChanged="AddressTextBox_TextChanged" FontSize="14"/>
         <Label x:Name="SecondNameLabel" Content="Second name:" HorizontalAlignment="Left" Margin="10,41,0,0" VerticalAlignment="Top" Width="85" Foreground="White"/>
@@ -20,7 +20,10 @@
         <Label x:Name="PhoneLabel" Content="Phone:" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="65" Foreground="White"/>
         <TextBox x:Name="PhoneTextBox" HorizontalAlignment="Left" Height="26" Margin="80,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" FontSize="14" TextChanged="PhoneTextBox_TextChanged"/>
         <Label x:Name="AuthorityLabel" Content="Authority:" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Width="65" Foreground="White"/>
-        <TextBox x:Name="AuthorityTextBox" HorizontalAlignment="Left" Height="26" Margin="80,134,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" FontSize="14" TextChanged="AuthorityTextBox_TextChanged"/>
+        <CheckBox x:Name="firstLevel" Content="1" HorizontalAlignment="Left" Margin="80,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}" Background="White"/>
+        <CheckBox x:Name="secondLevel" Content="2" HorizontalAlignment="Left" Margin="111,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}" Background="White"/>
+        <CheckBox x:Name="thirdLevel" Content="3" HorizontalAlignment="Left" Margin="142,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}" Background="White"/>
+        <Button x:Name="DeleteLibrarian" Content="Delete" HorizontalAlignment="Left" Margin="184,169,0,0" VerticalAlignment="Top" Width="100" Height="30" Background="{x:Null}" BorderBrush="White" Foreground="White" Click="DeleteLibrarian_Click"/>
 
     </Grid>
 </Window>
