--- a/LISy/LISy/WorkWindow.xaml
+++ b/LISy/LISy/WorkWindow.xaml
@@ -17,7 +17,7 @@
             </LinearGradientBrush>
         </Grid.Background>
         <ListView ItemsSource="{Binding View}" IsSynchronizedWithCurrentItem="False" Margin="160,70,0,358" HorizontalAlignment="Left" Width="530"/>
-        <TextBox Margin="160,70,0,0" HorizontalAlignment="Left" Width="530" Height="25" VerticalAlignment="Top" FontSize="14">
+        <TextBox x:Name="SearchTextBox" Margin="160,70,0,0" HorizontalAlignment="Left" Width="530" Height="25" VerticalAlignment="Top" FontSize="14">
             <TextBox.BorderBrush>
                 <ImageBrush/>
             </TextBox.BorderBrush>
