--- a/LISy/LISy/LibAdminModify.xaml
+++ b/LISy/LISy/LibAdminModify.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="LISy.LibAdminModify"
+﻿<Window x:Name="AdminModifyLibrarian" x:Class="LISy.LibAdminModify"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LISy"
         mc:Ignorable="d"
-        Title="AddLibrarian" Height="263.929" Width="324.837" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico" WindowStartupLocation="CenterScreen">
+        Title="Modify librarian" Height="263.929" Width="324.837" ResizeMode="NoResize" Icon="Design/icon_logo100x100.ico" WindowStartupLocation="CenterScreen">
     <Window.Background>
         <ImageBrush ImageSource="Design/books_shelf_back.jpg"/>
     </Window.Background>
@@ -20,10 +20,10 @@
         <Label x:Name="PhoneLabel" Content="Phone:" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="65" Foreground="White"/>
         <TextBox x:Name="PhoneTextBox" HorizontalAlignment="Left" Height="26" Margin="80,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="204" FontSize="14" TextChanged="PhoneTextBox_TextChanged"/>
         <Label x:Name="AuthorityLabel" Content="Authority:" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top" Width="65" Foreground="White"/>
-        <CheckBox x:Name="firstLevel" Content="1" HorizontalAlignment="Left" Margin="80,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}" Background="White"/>
-        <CheckBox x:Name="secondLevel" Content="2" HorizontalAlignment="Left" Margin="111,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}" Background="White"/>
-        <CheckBox x:Name="thirdLevel" Content="3" HorizontalAlignment="Left" Margin="142,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}" Background="White"/>
         <Button x:Name="DeleteLibrarian" Content="Delete" HorizontalAlignment="Left" Margin="184,169,0,0" VerticalAlignment="Top" Width="100" Height="30" Background="{x:Null}" BorderBrush="White" Foreground="White" Click="DeleteLibrarian_Click"/>
+        <RadioButton x:Name="firstLevel" Content="1" HorizontalAlignment="Left" Margin="80,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}"/>
+        <RadioButton x:Name="secondLevel" Content="2" HorizontalAlignment="Left" Margin="110,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}"/>
+        <RadioButton x:Name="thirdLevel" Content="3" HorizontalAlignment="Left" Margin="140,140,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}"/>
 
     </Grid>
 </Window>
