--- a/LISy/LISy/ModifyChekedOutCopies.xaml
+++ b/LISy/LISy/ModifyChekedOutCopies.xaml
@@ -10,10 +10,10 @@
         <ImageBrush ImageSource="Design/books_shelf_back.jpg" Stretch="None"/>
     </Window.Background>
     <Grid>
-        <CheckBox x:Name="make_book_returned" Content="Make Returned" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="White"/>
+        <CheckBox x:Name="make_book_returned" Content="Make Returned" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" Foreground="White" BorderBrush="{x:Null}"/>
         <Button x:Name="change_status_of_copy" Content="Save" HorizontalAlignment="Left" Margin="253,19,0,0" VerticalAlignment="Top" Width="90" Height="35" Click="Сhange_status_of_copy_Click" RenderTransformOrigin="0.524,0.591" BorderBrush="White" Foreground="White" Background="{x:Null}"/>
-        <CheckBox x:Name="setOutStandingRequestcheckBox" Content="Set Outstanding request" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="170" Foreground="White"/>
-        <CheckBox x:Name="disableOutstandingRequest" Content="Disable Outstanding request" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" Width="170" Foreground="White"/>
+        <CheckBox x:Name="setOutStandingRequestcheckBox" Content="Set Outstanding request" HorizontalAlignment="Left" Margin="10,30,0,0" VerticalAlignment="Top" Width="170" Foreground="White" BorderBrush="{x:Null}"/>
+        <CheckBox x:Name="disableOutstandingRequest" Content="Disable Outstanding request" HorizontalAlignment="Left" Margin="10,50,0,0" VerticalAlignment="Top" Width="170" Foreground="White" BorderBrush="{x:Null}"/>
 
     </Grid>
 </Window>
